# mrtautopilot-py3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deb.yml  pypi.yml
mrtautopilot/: __init__.py  autopilot.py  mission.py
scripts/: create-deb.sh
scripts/DEBIAN/: control
